ngrx version, not finished
ngrx version, not finished

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<app-countries-selector></app-countries-selector>
+<!--<app-countries-selector></app-countries-selector>-->
+<app-countries-selector-store></app-countries-selector-store>
